--- a/README_GIT.ipynb
+++ b/README_GIT.ipynb
@@ -22,8 +22,7 @@
     "8. PR for commit changes\n",
     "\n",
     "<u> extra commands (Assumes that repo already exists)<u>\n",
-    "- git branch -d \"branch_name\" ➡ safely delete the branch\n",
-    "- ➔  ➜  ➝  ➡\n"
+    "- git branch -d \"branch_name\" ➡ safely delete the local branch\n"
    ]
   }
  ],
