--- a/README_GIT.ipynb
+++ b/README_GIT.ipynb
@@ -15,11 +15,13 @@
     "\n",
     "   <u>new branch (Assumes that repo already exists)<u>\n",
     "1. git checkout dev ➡ get in dev branch\n",
-    "3. git pull ➡ updates the dev\n",
-    "5. git checkout -b \"branch_name\" ➡ creates and move into a new branch\n",
-    "6. git merge dev ➡ gets the last updates of dev branch\n",
-    "7. git push --set -upstream origin \"branch_name\" ➡ First push for the new branch\n",
-    "8. PR for commit changes\n",
+    "2. git pull ➡ updates the dev\n",
+    "3. git checkout -b \"branch_name\" ➡ creates and move into a new branch\n",
+    "4. git merge dev ➡ gets the last updates of dev branch\n",
+    "5. git push --set -upstream origin \"branch_name\" ➡ First push for the new branch\n",
+    "\n",
+    "    *or* git push\n",
+    "6. PR for commit changes\n",
     "\n",
     "<u> extra commands (Assumes that repo already exists)<u>\n",
     "- git branch -d \"branch_name\" ➡ safely delete the local branch\n"
