--- a/README_GIT.ipynb
+++ b/README_GIT.ipynb
@@ -23,6 +23,17 @@
     "    *or* git push\n",
     "6. PR for commit changes\n",
     "\n",
+    "<u> PR for commit changes<u>\n",
+    "1. Go to GitHub page\n",
+    "2. Select the repo\n",
+    "3. Pull requests\n",
+    "4. New Pull request\n",
+    "5. Choose from the list your branch\n",
+    "6. Check the changes\n",
+    "7. Create pull request\n",
+    "8. Add a description (optional)\n",
+    "9. Create pull request\n",
+    "\n",
     "<u> extra commands (Assumes that repo already exists)<u>\n",
     "- git branch -d \"branch_name\" ➡ safely delete the local branch\n"
    ]
