--- a/README_GIT.ipynb
+++ b/README_GIT.ipynb
@@ -34,6 +34,14 @@
     "8. Add a description (optional)\n",
     "9. Create pull request\n",
     "\n",
+    "<u> Reviewer role <u>\n",
+    "1. Check the changes\n",
+    "   ➡ accept or\n",
+    "   ➡ send message with corrections\n",
+    "3. If changes are accepted, merge\n",
+    "4. Confirm merge\n",
+    "5. Delete branch\n",
+    "\n",
     "<u> extra commands (Assumes that repo already exists)<u>\n",
     "- git branch -d \"branch_name\" ➡ safely delete the local branch\n"
    ]
