--- a/README_GIT.ipynb
+++ b/README_GIT.ipynb
@@ -36,8 +36,11 @@
     "\n",
     "<u> Reviewer role <u>\n",
     "1. Check the changes\n",
-    "   ➡ accept or\n",
+    "   \n",
+    "   ➡ accept *or*\n",
+    "   \n",
     "   ➡ send message with corrections\n",
+    "   \n",
     "3. If changes are accepted, merge\n",
     "4. Confirm merge\n",
     "5. Delete branch\n",
