Removing all previous Headings

--- a/README_GIT.ipynb
+++ b/README_GIT.ipynb
@@ -7,11 +7,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# 1st-BBDA-project\n",
-    "\n",
-    "This is an EDA project that uses the Used Cars Price Data provided by [Kaggle](https://www.kaggle.com/datasets/avikasliwal/used-cars-price-prediction/data?select=train-data.csv).\n",
-    "\n",
-    "## 1. Using git\n",
+    "## Using git\n",
     "\n",
     "   <u>new branch (Assumes that repo already exists)<u>\n",
     "1. git checkout dev ➡ get in dev branch\n",
